opensource/opentelemetry-collector/templates/service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: opentelemetry-collector-service 
  labels: 
    app: opentelemetry-collector
spec: 
  selector: 
    app: opentelemetry-collector
  ports: 
#  - name: jaeger-compact
#    port: 6831
#    targetPort: 6831
#    protocol: UDP
#  - name: jaeger-grpc
#    port: 14250
#    targetPort: 14250
#    protocol: TCP
#  - name: jaeger-thrift
#    port: 14268
#    targetPort: 14268
#    protocol: TCP
#  - name: zipkin
#    port: 9411
#    targetPort: 9411
#    protocol: TCP
  - name: otlp-grpc # Default endpoint for OpenTelemetry gRPC receiver.
    port: 4317
    targetPort: 4317
    protocol: TCP
    appProtocol: grpc
  - name: otlp-http # Default endpoint for OpenTelemetry HTTP receiver.
    port: 4318
    targetPort: 4318
    protocol: TCP
#  - name: metrics # Default endpoint for querying metrics.
#    port: 8888
#  type: LoadBalancer
